[tool.poetry]
name = "hexlet-friends"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
gunicorn = "^20.1.0"
dj-database-url = "^0.5"
whitenoise = "^6.2.0"
python-dateutil = "^2.8.2"
APScheduler = "^3.9.1"
django-crispy-forms = "^1.14.0"
django-cte = "^1.2.1"
PyJWT = "^2.4.0"
cryptography = "^39.0.1"
crispy-bootstrap5 = "^0.6"
django-extensions = "^3.2.1"
psycopg2-binary = "^2.9.6"
django-debug-toolbar = "^3.8.1"


[tool.poetry.group.dev.dependencies]
Faker = "^13.15.1"
coverage = "^6.4.2"
ruff = "^0.0.263"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
